--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,38 @@ body {
     /*font-family: 'DM Serif Display', serif;*/
     font-family: 'Jost', sans-serif;
 }
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 43px 0 45px 0;
+}
+.header__nav {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding-left: 0;
+}
+.header__item {
+    margin-left: 48px;
+}
+.header__item:last-child {
+    margin-left: 30px;
+}
+.header__link {
+    color: #292F36;
+    font-size: 20px;
+    text-decoration: none;
+}
+.header__search {
+    display: flex;
+    padding: 0;
+    background: transparent;
+    border: none;
+    
+}
