--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
-    /*font-family: 'DM Serif Display', serif;*/
+    font-family: 'DM Serif Display', serif;
     font-family: 'Jost', sans-serif;
     margin: 0;
     background-image: url(../img/line.svg);
     background-repeat-x: no-repeat;
     background-position: center;
+}
+p {
+    color: #4D5053;
+    font-family: Jost;
     font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 0.22px;
 }
 ul {
     margin: 0;
@@ -128,12 +136,15 @@ button {
     height: 22px;
 }
 /*Hero*/
+.hero__section {
+    margin-bottom: 200px;
+}
 .hero {
     position: relative;
     overflow: hidden;
     border-radius: 0 0 0 30vh;
-    padding-top: 30vh;
-    padding-bottom: 40vh;   
+    padding-top: 32vh;
+    padding-bottom: 46vh;   
 }
 .hero__img {
     width: 100%;
@@ -144,4 +155,71 @@ button {
     object-fit: cover;
     z-index: -1;
 }
- 
+.hero__title {
+    color: #292F36;
+    font-family: DM Serif Display;
+    font-size: 85px;
+    font-weight: 400;
+    line-height: 125%;
+    max-width: 560px;
+    margin: 0 0 9px 0;
+}
+.hero__text {
+    color: #4D5053;
+    font-family: Jost;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 0.22px;
+    max-width: 560px;
+    margin: 0;
+}
+/*About*/
+.about {
+    display: flex;
+}
+.about__text {
+    max-width: 460px;
+}
+.about__title {
+    max-width: 422px;
+    color: #292F36;
+    font-family: DM Serif Display;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 125%;
+    letter-spacing: 1px;
+}
+.about__tel {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.about__btn {
+    background-image: url(../img/Call.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: block;
+    border-radius: 50%;
+    width: 93px;
+    height: 93px;
+}
+
+
+
+
+.about__thumb {
+    position: relative;
+    overflow: hidden;
+    border-radius: 0 30vh 0 30vh;
+    padding-top: 50vh;
+    padding-bottom: 50vh;   
+}
+.about__img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    z-index: -1;
+}
