--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ button {
 .about__box {
     max-width: 460px;
 }
-.about__title {
+.title {
     max-width: 422px;
     color: #292F36;
     font-family: DM Serif Display;
