--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,7 @@ button {
     max-width: 560px;
     margin: 0 0 9px 0;
 }
-.hero__text {
-    color: #4D5053;
-    font-family: Jost;
-    font-weight: 400;
-    line-height: 150%;
-    letter-spacing: 0.22px;
+.text {
     max-width: 560px;
     margin: 0;
 }
@@ -258,6 +253,7 @@ button {
     right: 30px;
     overflow: hidden;
 }
+/*SWIPER*/
 .swiper {
     width: 100%;
     height: 674px;
@@ -325,12 +321,14 @@ button {
     top: -4px;
     left: 92px;
 }
+/*BRANDS*/
 .brands {
     display: flex;
     align-items: center;
     justify-content: space-around;
     margin: 178px 0;
 }
+/*STATS*/
 .stats__section {
     width: 100%;
     background-color: #F4F0EC;
@@ -360,4 +358,30 @@ button {
 }
 .stats__title {
     color: #CDA274;
+}
+/*ARTICLES*/
+.articles__section {
+    margin-bottom: 178px;
+}
+.title__articles {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 12px;
+}
+.articles__text {
+    margin: 0 auto;
+    margin-bottom: 52px;
+}
+.articles {
+    display: flex;
+}
+.articles__title {
+ 
+}
+.articles__text {
+    max-width: 812px;
+}
+.articles__info {
+    display: flex;
+    align-items: center;
 }
