--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ button {
     line-height: 125%; 
     letter-spacing: 0.36px;
     margin-bottom: 43px;
+    font-family: Jost;
 }
 .link::after {
     content: "";
@@ -293,34 +294,31 @@ button {
     line-height: 150%; /* 37.5px */
     letter-spacing: 0.25px;
 }
-.swiper-button-next::after {
+.swiper-feedback__next, .swiper-feedback__prev {
+    background-color: #fff;
+    width: 52px;
+    height: 52px;
+    border-radius: 100%;
+}
+.swiper-feedback__next {
+    right: 92px;
+}
+.swiper-feedback__prev {
+    left: 92px;
+}
+.swiper-button-next::after, .swiper-button-prev::after {
     content: "";
     background-image: url(../img/swiperright.svg);
-    background-color: #ffffff;
+    background-color: transparent;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     display: block;
-    border-radius: 50%;
-    width: 52px;
-    height: 52px;
-    position: absolute;
-    top: -4px;
-    right: 92px;
-    font-size: 20px;
+    width: 8px;
+    height: 16px;
 }
 .swiper-button-prev::after {
-    content: "";
-    background-image: url(../img/swiperleft.svg);
-    background-color: #ffffff;
-    background-position: center center;
-    background-repeat: no-repeat;
-    display: block;
-    border-radius: 50%;
-    width: 52px;
-    height: 52px;
-    position: absolute;
-    top: -4px;
-    left: 92px;
+    transform: rotate(180deg);
 }
 /*BRANDS*/
 .brands {
@@ -375,8 +373,10 @@ button {
     text-align: center;
 }
 .articles {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 23px;
+    margin-top: 52px;
 }
 article {
     border-radius: 62px;
@@ -386,10 +386,6 @@ article {
 }
 article:nth-child(2) {
     background:#F4F0EC;
-}
-.articles__item {
-    display: flex;
-    flex-direction: column;
 }
 .articles__thumb {
     position: relative;
@@ -425,4 +421,96 @@ article:nth-child(2) {
     align-items: center;
     justify-content: space-around;
     gap: 120px;
+}
+/*SUBSCRIBE*/
+.subscribe__section {
+    margin-bottom: 200px;
+}
+.suscribe {
+    display: flex;
+    padding: 80px 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 70px;
+    background-color: #292F36;
+}
+.suscribe {
+    & h2, p {
+        color: #FFFFFF;
+        margin: 0 0 11px 0;
+        max-width: 570px;
+    }
+}
+.subscribe_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.subscribe__email {
+    border-radius: 18px 0 0 18px;
+    height: 73px;
+    color: var(--gray-400, #98A2B3);
+    font-family: Jost;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; 
+    border: none;
+    padding-left: 20px;
+}
+.subscribe__btn {
+    border-radius: 0 18px 18px 0;
+    height: 75px;
+    background-color: #CDA274;
+    color: var(--White, #FFF);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 0 26px;
+}
+/*CONTACT*/
+.contact__section {
+    margin-bottom: 156px;
+}
+.title__contact {
+    max-width: 636px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 77px;
+}
+.contact-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 800px;
+    margin: 0 auto;
+    column-gap: 40px;
+}
+.contact-form__input {
+    border: none;
+    border-bottom: 1px solid #000;
+    padding-bottom: 13px;
+    margin-bottom: 57px;
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+}
+.contact-form__textarea {
+    grid-column: 1 / 3;
+    border: none;
+    border-bottom: 1px solid #000;
+    margin-bottom: 77px;
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    height: 130px;
+}
+.contact-form__btn {
+    justify-self: center;
+    grid-column: 1 / 3;
+}
+.link__contact {
+    padding: 26px 55px 26px 31px;
+    margin: 0;
 }
