--- a/css/style.css
+++ b/css/style.css
@@ -514,3 +514,34 @@ article:nth-child(2) {
     padding: 26px 55px 26px 31px;
     margin: 0;
 }
+/*BLOG*/
+.blog__bg {
+    margin-bottom: 200px;
+}
+.thumb {
+    position: relative;
+    overflow: hidden;
+}
+.thumb__info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 2%;
+    left: 40%;
+    border-radius: 37px 37px 0px 0px;
+    background-color: #FFFFFF;
+    padding: 0;
+}
+.breadcrumbs {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+.breadcrumbs a::before {
+    content: '/';
+    position: relative;
+    left: 1px;
+    pointer-events: none;
+    text-decoration: none;
+}
