--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
     letter-spacing: 0.22px;
     margin: 0;
 }
-ul {
+ul, li {
     margin: 0;
     list-style-type: none;
     padding: 0;
@@ -521,27 +521,51 @@ article:nth-child(2) {
 .thumb {
     position: relative;
     overflow: hidden;
+    height: 351px;
+}
+.thumb__img {
+    width: 100%;
+    height: 351px;
 }
 .thumb__info {
     display: flex;
     justify-content: center;
     flex-direction: column;
     position: absolute;
-    bottom: 2%;
-    left: 40%;
+    bottom: 0%;
+    left: 38%;
     border-radius: 37px 37px 0px 0px;
     background-color: #FFFFFF;
-    padding: 0;
+    padding: 41px 78px;
+}
+.title__blog {
+    margin: 0;
 }
 .breadcrumbs {
     display: flex;
     justify-content: center;
     gap: 12px;
 }
+.breadcrumbs a {
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 150%; /* 33px */
+    letter-spacing: 0.22px;
+    transition: .4s;
+    text-decoration: none;
+}
+.breadcrumbs a:hover {
+    color: #CDA274;
+}
 .breadcrumbs a::before {
     content: '/';
     position: relative;
-    left: 1px;
+    left: -5px;
     pointer-events: none;
-    text-decoration: none;
+    color: #4D5053;
+}
+.breadcrumbs li:first-child a::before {
+    display: none;
 }
