--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,36 @@ button {
     border: none; 
     cursor: pointer; 
 }
+/*content*/
+.page-content {
+    padding: 178px 0;
+}
+.content {
+    display: grid;
+    grid-template-columns: 1fr 345px;
+    gap: 52px;
+}
+.widget {
+    margin: 50px 0;
+}
+.widget__title {
+    font-family: 'DM Serif Display', serif;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 125%;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #292F36;
+    margin: 0;
+}
+
+
+
+
+
+
+
+
 /*footer*/
 .bg {
     background-color: #F4F0EC;
@@ -495,7 +525,6 @@ article {
     font-size: 22px;
 }
 .contact-form__textarea {
-    grid-column: 1 / 3;
     border: none;
     border-bottom: 1px solid #000;
     margin-bottom: 77px;
@@ -503,14 +532,14 @@ article {
     font-family: Jost;
     font-size: 22px;
     height: 130px;
+    resize: none;
 }
+.contact-form__textarea,
 .contact-form__btn {
-    justify-self: center;
     grid-column: 1 / 3;
 }
-.link__contact {
-    padding: 26px 55px 26px 31px;
-    margin: 0;
+.contact-form__btn {
+    text-align: center;
 }
 /*BLOG*/
 .blog__bg {
