--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
     background-repeat-x: no-repeat;
     background-position: center;
 }
+a {
+    text-decoration: none;
+}
 p {
     color: #4D5053;
     font-family: Jost;
@@ -89,6 +92,66 @@ button {
     color: #292F36;
     margin: 0;
 }
+.search-area {
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #F4F0EC;
+    padding: 34px 33px;
+    position: relative;
+}
+.search-area__input {
+    background-color: transparent;
+    border: none;
+    color: #CDA274;
+    font-family: Jost;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 150%; /* 33px */
+    letter-spacing: 0.22px;
+}
+.search-area__button {
+    background-image: url(../img/search-content.svg);
+    background-repeat: no-repeat;
+    display: block;
+    width: 27px;
+    height: 27px;
+    position: absolute;
+    top: 40px;
+    right: 33px;
+}
+.widget__title {
+    margin-bottom: 33px;
+}
+.post-recent article {
+    border-radius: 0;
+    border: none;
+    padding: 0;
+    border-bottom: 1px solid #CDA274;
+    margin-bottom: 34px;
+}
+.post-recent__title {
+    margin: 0;
+}
+.post-recent__title a {
+    color: #292F36;
+    font-family: DM Serif Display;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 125%; /* 25px */
+    letter-spacing: 0.4px;
+    max-width: 200px;
+}
+.post-recent__date {
+    text-align: right;
+}
+.post-recent__date {
+    padding-right: 5px;
+}
+
+
+
+
 
 
 
