--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ button {
     border: none; 
     cursor: pointer; 
 }
-/*content*/
+/*SIDEBAR*/
 .page-content {
     padding: 178px 0;
 }
@@ -80,7 +80,7 @@ button {
     gap: 52px;
 }
 .widget {
-    margin: 50px 0;
+    margin-bottom: 50px;
 }
 .widget__title {
     font-family: 'DM Serif Display', serif;
@@ -148,9 +148,49 @@ button {
 .post-recent__date {
     padding-right: 5px;
 }
+.widget-category {
+    border-radius: 20px;
+    background-color: #F4F0EC;
+    padding: 27px 32px;
+    position: relative;
+}
+.category-list li {
+    padding: 0;
+    border-bottom: 1px solid #CDA274;
+    font-family: Jost;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 300%;
+    letter-spacing: 0.22px;
+}
+.category-list a {
+    color: #4D5053;
+}
+.tags-list a {
+    color: #292F36;
+    text-align: center;
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 125%; /* 22.5px */
+    letter-spacing: 0.36px;
+    border-radius: 10px;
+    background: #F4F0EC;  
+    padding: 9px 16px; 
+    transition: .4s; 
+}
+.tags-list a:hover {
+    color: #F4F0EC;
+    background: #292F36;  
+}
 
-
-
+.tags-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    row-gap: 10px;
+    justify-items: start;
+}
 
 
 
