--- a/css/style.css
+++ b/css/style.css
@@ -245,15 +245,150 @@ button {
 .author__text {
     margin-top: 50px;
 }
-
-
-
-
-
-
-
-
-
+.content article {
+    border: none;
+    padding: 0;
+}
+/*POST*/
+.post h1,
+.post h2,
+.post h3,
+.post h4,
+.post h5,
+.post h6 {
+    font-family: 'DM Serif Display', serif;
+    color: #292F36;
+    line-height: 1.2;
+    font-weight: 400;
+}
+.post h1 {
+    font-size: 50px;
+}
+.post h2 {
+    font-size: 45px;
+}
+.post h3 {
+    font-size: 40px;
+}
+.post h4 {
+    font-size: 38px;
+}
+.post h5 {
+    font-size: 35px;
+}
+.post h6 {
+    font-size: 30px;
+}
+.post a {
+    color: #CDA274;
+    text-decoration: none;
+}
+.post ul,
+.post ol {
+    padding-left: 0;
+    list-style-type: none;
+    margin: 24px 0;
+}
+.post ol {
+    counter-reset: item;
+}
+.post ul > li, 
+.post ol > li {
+    position: relative;
+    padding-left: 20px;
+}
+.post ul > li::before {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background-color: #CDA274;
+    position: absolute;
+    top: 9px;
+    left: 0px;
+}
+.post ol > li::before {
+    content: '';
+    content: counter(item);
+    counter-increment: item;
+    font-family: 'DM Serif Display', serif;
+    color: #CDA274;
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 400;
+    position: absolute;
+    top: 1px;
+    left: 0px;
+}
+.post ul > li + li, 
+.post ol > li + li {
+    margin-top: 32px;
+}
+.post figure {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 365px;
+    border-radius: 50px;
+    margin: 44px 0;
+}
+.post figure img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+.post blockquote {
+    font-family: 'DM Serif Display', serif;
+    font-size: 25px;
+    font-weight: 400;
+    font-style: italic;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #CDA274;
+    background-color: #F4F0EC;
+    border-radius: 50px;
+    padding: 50px 100px;
+    position: relative;
+    margin-left: 0;
+    margin-right: 0;
+}
+.post blockquote::before {
+    content: '';
+    background-image: url(../img/blockquote.svg);
+    background-size: cover;
+    display: block;
+    width: 72px;
+    height: 54px;
+    margin: 0 auto 30px;
+}
+.post__date {
+    display: block;
+    font-size: 16px;
+    margin: 46px 0 48px 0;
+}
+.post__thumb {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 540px;
+    border-radius: 50px;
+    margin: 44px 0;
+}
+.post__thumb img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
 /*footer*/
 .bg {
     background-color: #F4F0EC;
