--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ button {
     font-size: 20px;
     font-weight: 400;
     line-height: 125%; /* 25px */
-    margin-top: 0;
+    margin-top: 34px;
     margin-bottom: 0;
     max-width: 200px;
 }
@@ -389,6 +389,26 @@ button {
     transform: translate(-50%, -50%);
     object-fit: cover;
 }
+/*TABS*/
+.tab-link {
+
+}
+.tab-link.active {
+    background-color: #CDA274;
+}
+.tab-content {
+    display: none;
+    animation: fading 1s;
+}
+@keyframes fading {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 /*footer*/
 .bg {
     background-color: #F4F0EC;
