--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
+    padding: 34px 0;
 }
 .header__nav {
     display: flex;
@@ -736,8 +736,15 @@ button {
     position: relative;
     overflow: hidden;
     border-radius: 0 0 0 30vh;
-    padding-top: 32vh;
-    padding-bottom: 46vh;   
+    height: calc(100vh - 145px);
+    min-height: 400px;
+    max-height: 1042px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 198px; 
+}
+.hero>.container {
+    flex-basis: 100%;
 }
 .hero__img {
     width: 100%;
@@ -768,10 +775,13 @@ button {
 .about {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    gap: 75px;
     margin-bottom: 200px;
 }
 .about__box {
-    max-width: 460px;
+    flex-grow: 1;
+    flex-basis: calc(100% - 700px);
 }
 .title {
     max-width: 422px;
@@ -781,13 +791,17 @@ button {
     font-weight: 400;
     line-height: 125%;
     letter-spacing: 1px;
-    margin: 43px 0 33px 0;
 }
 .about__tel {
     display: flex;
     align-items: center;
     gap: 15px;
     margin: 45px 0 47px 0;
+}
+.about__call > p > a {
+    color: inherit;
+    text-decoration: none;
+    font-weight: 700;
 }
 .about__btn {
     background-image: url(../img/Call.svg);
@@ -800,13 +814,11 @@ button {
 }
 
 .about__thumb {
-    flex-basis: 660px;
+    flex-basis: 50%;
     position: relative;
     overflow: hidden;
-    border-radius: 0 30vh 0 30vh;
-    padding-top: 35vh;
-    padding-bottom: 35vh;
-    height: 26px;
+    border-radius: 0px clamp(100px, 20vw, 326px) 0px clamp(50px, 7vw, 123px);
+    height: 653px;
 }
 .about__img {
     width: 100%;
@@ -861,9 +873,12 @@ button {
     text-align: center;
     margin: 0 auto;
 }
-.title__slide {
-    margin: 88px 0;
-    max-width: 750px;
+.swiper-feedback__slide {
+    text-align: center;
+    background-color: #F4F0EC;
+    border-radius: 70px;
+    padding: 88px 225px 88px;
+    box-sizing: border-box;
 }
 .swiper-text {
     margin-top: 27px;
@@ -1004,8 +1019,7 @@ article {
 .articles__info {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    gap: 120px;
+    justify-content: space-between;
 }
 /*SUBSCRIBE*/
 .subscribe__section {
@@ -1367,4 +1381,140 @@ article {
 .error__btn::after {
     top: 28px;
     right: 50px;
+}
+
+/* Media */
+
+@media (max-width: 1200px) {
+    body {
+        font-size: 18px;
+    }
+    .container {
+        max-width: 900px
+    }
+    .title {
+        font-size: 40px;
+    }
+    .about {
+        gap: 5%;
+    }
+    .about__box {
+        flex-basis: calc(100% - 700px);
+    }
+    .about__thumb {
+        flex-basis: 50%;
+        border-radius: 0px clamp(100px, 20vw, 326px) 0px clamp(50px, 7vw, 123px)
+    }
+    .about__btn {
+        width: 74px;
+        height: 74px;
+    }
+    .about__call>p:first-child {
+        font-size: 20px;
+    }
+    .about__call>p:last-child {
+        font-size: 18px;
+    }
+    .link {
+        font-size: 16px;
+    }
+    .title__slide {
+        margin-bottom: 88px;
+    }
+    .swiper-feedback__slide {
+        padding: 88px 150px 90px;
+    }
+    .swiper-feedback__next {
+        right: 50px;
+    }
+    .swiper-feedback__prev {
+        left: 50px;
+    }
+    .swiper-text {
+        font-size: 25px;
+        max-width: 450px;
+    }
+    .swiper-author {
+        margin-top: 50px;
+        font-size: 20px;
+    }
+    .brands {
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 12vw;
+        margin: 150px 0;
+    }
+    .stats__section {
+        margin-bottom: 160px;
+        padding: 140px 0;
+    }
+    .articles__section {
+        margin-bottom: 150px;
+    }
+    .articles {
+        gap: 15px
+    }
+    .articles__item, .article-main__item {
+        border-radius: 56px;
+        padding: 10px 10px 23px 10px;
+        background-color: #fff;
+        transition: .4s;
+    }
+    .articles__thumb {
+        height: 250px;
+    }
+    .articles__title, .article-main__title {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+    .articles__date, .articles-main__date, .articles__tag {
+        font-size: 14px;
+    }
+    .articles {
+        gap: 15px;
+    }
+    .subscribe__section {
+        margin-bottom: 150px;
+    }
+    .page-error {
+        padding: 120px 0 180px 0;
+    }
+    .error__title {
+        font-size: 200px;
+    }
+    .error__text {
+        font-size: 30px;
+        max-width: 450px;
+    }
+    .footer__info {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        gap: 0px 50px;
+        align-items: start;
+    }
+    .footer__address {
+        grid-row: 1 / 3;
+        margin: 0;
+    }
+    .footer__info a {
+        text-align: right;
+    }
+}
+@media (max-width: 768px) {
+    .container {
+        max-width: 600px
+    }
+    .title__slide {
+        margin-bottom: 60px;
+    }
+    .swiper-feedback__slide {
+        padding: 50px 150px 65px;
+    }
+    .articles {
+        grid-template-columns: 1fr;
+    }
+    .contact-form .contact-form__btn {
+        text-align: center;
+    }
 }
